--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -120,8 +120,8 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
 </p>
 
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá </i></b></figcaption>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/egipto-01.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>Esta imagen es la hora en china </i></b></figcaption>
 </figure>
 
 <p>
