--- a/_posts/2019-03-26-egipto.html
+++ b/_posts/2019-03-26-egipto.html
@@ -1,7 +1,7 @@
 ---
-layout: post
+layout: post  
 title:  "Cuatro camellos y un funeral"
-subtitle: "Falta el subtitulo... "
+subtitle: ""
 date:   2019-3-26 10:45:13 -0400
 background: '/img/posts/06.jpg'
 ---
@@ -9,6 +9,15 @@ background: '/img/posts/06.jpg'
 <p>
   Muy bien, pueden pasar, pero apúrense que ya se está por llenar un taxi” dijo en ingles el policía mientras nos devolvía los pasaportes sellados. La emoción nos invadió de tal manera que teníamos ganas de saltar de alegría ahí en plena frontera. Después de la odisea que fue hacer migraciones en Israel, parecía mentira que pudiésemos pasar tan rápido desde Eilat (Israel) a Taba (Egipto), considerando que son dos países que se encuentran en guerra hace años. Pero claro, somos turistas. Ojalá todos los habitantes de Oriente Medio contaran con el mismo privilegio que nosotros para atravesar fronteras que ni deberían existir. Digo nosotros porque llevaba más de un mes viajando con Camilo, un compañero de aventuras colombiano que me regaló el camino.
 </p>
+
+<p>
+  Algo nuevo
+</p>>
+
+<figure>
+    <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Imagen mía frente al río">
+    <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá </i></b></figcaption>
+  </figure>
 
 <p>
 Pusimos pies en tierras egipcias alrededor de las 4 de la tarde. Apenas atravesar la puerta, se presentaban frente a nuestros ojos hombres de blanco conversando frente a varios coches, vestidos con el Thawb (túnicas) y el Kafiyyeh (lo que los brutos llamamos turbante), confirmando que ya estábamos en este polémico país árabe. Miro a mi amigo para comentarle acerca del carnaval de emociones que estaba aconteciendo en mi interior al ver esa postal, pero mis intenciones fueron interrumpidas por el primero de los muchos tantos hombres que abandonaban sus puestos y desfilaban hacia nosotros para ofrecernos un taxi. Que poco me duró la alegría de verlos!
