--- a/_posts/2019-03-26-egipto.html
+++ b/_posts/2019-03-26-egipto.html
@@ -16,7 +16,7 @@ background: '/img/posts/06.jpg'
 
 <figure>
     <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Imagen mía frente al río">
-    <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá </i></b></figcaption>
+    <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá El subtitulo de la imagen va acáEl subtitulo de la imagen va acáEl subtitulo de la imagen va acá</i></b></figcaption>
   </figure>
 
 <p>
