--- a/_posts/2019-03-28-turquia.html
+++ b/_posts/2019-03-28-turquia.html
@@ -19,6 +19,13 @@ background: '/img/posts/06.jpg'
     <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá </i></b></figcaption>
   </figure>
 
+  <h2>
+    Subtitulo h2
+  </h2>
+
+  <h3>
+      Subtitulo h2
+    </h3>
 <p>
 Pusimos pies en tierras egipcias alrededor de las 4 de la tarde. Apenas atravesar la puerta, se presentaban frente a nuestros ojos hombres de blanco conversando frente a varios coches, vestidos con el Thawb (túnicas) y el Kafiyyeh (lo que los brutos llamamos turbante), confirmando que ya estábamos en este polémico país árabe. Miro a mi amigo para comentarle acerca del carnaval de emociones que estaba aconteciendo en mi interior al ver esa postal, pero mis intenciones fueron interrumpidas por el primero de los muchos tantos hombres que abandonaban sus puestos y desfilaban hacia nosotros para ofrecernos un taxi. Que poco me duró la alegría de verlos!
 </p>
