--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -162,7 +162,7 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
       </div>
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/china/china-3.jpg" alt="Aca estoy culo al norte">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/china/china-3.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
           <h5>...</h5>
           <p>...</p>
