--- a/_posts/2019-03-28-turquia.html
+++ b/_posts/2019-03-28-turquia.html
@@ -13,11 +13,6 @@ background: '/img/posts/06.jpg'
 <p>
     Creo que en el fondo estaba buscando eso, sentir un poco de miedo, algo distinto. En Europa todo es muy ordenado, muy predecible. La cultura, si bien por supuesto tiene sus particularidades, en líneas generales es similar a lo que se puede ver en mi país. Y a fin de cuentas, una gran porción de Estambul pertenece a Europa; algo en común tendría que tener.
 </p>
-<!-- 
-<figure>
-    <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Imagen mía frente al río">
-    <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá </i></b></figcaption>
-  </figure> -->
 
   <p>
       Hay muchas formas de abaratar costos cuando se viaja y una de ellas es hacer voluntariados, los cuales consisten en intercambiar unas horas de trabajo al día por hospedaje, comida y en algunos casos, también se pagan propinas. Existen innumerables tipos de voluntariados, sea colaborando en arreglar/construir una vivienda, enseñar idiomas, trabajar en granjas o huertas, etc. Yo venía viajando desde hacía meses, moviéndome de acá para allá, y más que por abaratar costos, necesitaba estar quieta en un lugar, dormir más de una semana en una misma cama, desarmar mi mochila y acomodar mis pocas pertenencias en un armario improvisado, no tener que preocuparme por reservar trenes, hostels, excursiones. Necesitaba pertenecer a algún lugar por un algún tiempo haciendo algo. Y si en ese período no gastaba dinero en hospedaje y comida, mejor aún.
@@ -59,6 +54,11 @@ background: '/img/posts/06.jpg'
       Hacer autostop es sencillo; consiste básicamente en dirigirte hasta la ruta que sale de la ciudad donde te encontrás, posicionarte al lado del camino, en un lugar con dársena o banquina para que los autos puedan frenar y listo, mostrar tu pulgar hacia arriba hasta que alguien se disponga a llevarte. Algo de extrema simplicidad que Camilo tomaba con absoluta naturalidad, pero yo me sentía como nena en una juguetería. Es que justamente, iba a jugar un juego totalmente nuevo. ¡Que divertido!
 
   </p>
+  
+<figure>
+    <img class="img-fluid" src="{{ site.baseurl }}/img/posts/turquia/dedo.jpg" alt="ATR">
+    <figcaption style="text-align: center;"> <b><i>Al lado del camino, empezando a hacer dedo </i></b></figcaption>
+  </figure> 
   <p>
       Mi cara de parque de diversiones debe haber sido muy evidente, porque apenas pararnos en las afueras de Göreme (poblado más turístico de la región de Capadocia), el primer auto que nos vio, paró. Fue un bautismo bastante peculiar considerando que era un taxi. Le agradecimos su gentileza de parar pero no íbamos a pagarle por llevarnos. El hombre insistió en que subiéramos. Fue muy difícil corroborar que no nos cobraría porque prácticamente no hablaba inglés, pero una vez que mediante una mezcla de palabras y señas logramos asegurarnos que no pretendía dinero sino acercarnos hasta la próxima ruta donde pasaban más autos, nos subimos. Intentamos establecer una mínima conversación con él a pesar de su inglés rudimentario, pero el señor sólo se limitó a ofrecernos cigarrillos y a regalarme su piropo diciéndome “you very beautiful”.
   </p>
