--- a/_posts/2019-03-26-egipto.html
+++ b/_posts/2019-03-26-egipto.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Cuatro camellos y un funeral"
 subtitle: ""
 date:   2019-3-26 10:45:13 -0400
-background: '/img/posts/06.jpg'
+background: '/img/posts/egipto/camellos.jpg'
 ---
 
 <p>
@@ -14,10 +14,6 @@ background: '/img/posts/06.jpg'
     <b><i> Algo nuevo </i></b>
 </p>>
 
-<figure>
-    <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Imagen mía frente al río">
-    <figcaption style="text-align: center;"> <b><i>El subtitulo de la imagen va acá El subtitulo de la imagen va acáEl subtitulo de la imagen va acáEl subtitulo de la imagen va acá</i></b></figcaption>
-  </figure>
 
 <p>
 Pusimos pies en tierras egipcias alrededor de las 4 de la tarde. Apenas atravesar la puerta, se presentaban frente a nuestros ojos hombres de blanco conversando frente a varios coches, vestidos con el Thawb (túnicas) y el Kafiyyeh (lo que los brutos llamamos turbante), confirmando que ya estábamos en este polémico país árabe. Miro a mi amigo para comentarle acerca del carnaval de emociones que estaba aconteciendo en mi interior al ver esa postal, pero mis intenciones fueron interrumpidas por el primero de los muchos tantos hombres que abandonaban sus puestos y desfilaban hacia nosotros para ofrecernos un taxi. Que poco me duró la alegría de verlos!
@@ -47,6 +43,10 @@ Subimos los tres a la Van y emprendimos el camino de unos 140 kilómetros que no
   Se ve que un buen hombre leyó mis pensamientos y se ofreció a llevarnos hasta destino. En el camino nos contaba que había perdido 3 amigos que habían tenido accidentes con camellos en la ruta. “Ustedes se salvaron porque les tocó un señor mayor que iba a menos de 60km por hora y en una Van que es alta. Si se me cruzaba el camello a mi, me mato sin duda”.
 </p>
 
-<blockquote class="blockquote">Ese día aprendí cuan peligrosa que puede ser la ley de atracción y la importancia de controlar los pensamientos.</blockquote>
+<blockquote class="blockquote">Ese día aprendí cuan peligrosa que puede ser la ley de atracción y lo arriesgado que puede ser no seguir la voluntad de una moneda.</blockquote>
+<
+  figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/yocamello.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>Finalmente hicimos las pases con los camellos</i></b></figcaption>
+</figure>
 
-<img class="img-fluid" src="https://source.unsplash.com/Mn9Fa_wQH-M/800x450" alt="Demo Image">
