--- a/_posts/2019-03-26-egipto.html
+++ b/_posts/2019-03-26-egipto.html
@@ -44,9 +44,8 @@ Subimos los tres a la Van y emprendimos el camino de unos 140 kilómetros que no
 </p>
 
 <blockquote class="blockquote">Ese día aprendí cuan peligrosa que puede ser la ley de atracción y lo arriesgado que puede ser no seguir la voluntad de una moneda.</blockquote>
-<
-  figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/yocamello.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>Finalmente hicimos las pases con los camellos</i></b></figcaption>
-</figure>
 
+<figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/yocamello.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>Finalmente hicimos las pases con los camellos </i></b></figcaption>
+</figure>
