--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Un solo día en un país puede ser demasiado"
-subtitle: "Yo aqui aprendiiii....iHakuna Matata!!!"
+subtitle: ""
 date:   2019-2-18 10:45:13 -0400
 background: '/img/posts/china/china-01.jpg'
 ---
@@ -85,11 +85,14 @@ Ahí recordé ese mapa que, mis ahora ángeles de la guarda, me habían regalado
 Basta, me cansé. Voy a caminar todo el día sin importar los 8 kg que llevo en la espalda ni a donde llegue. A partir de ahí, mi única preocupación fueron dos, la hora para volver al aeropuerto y no perder el mapa, mi único auxilio en esa jungla.
 </p>
 
-<img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-02.jpg" alt="Demo Image">
-
 <p>
 Mis sentidos se fueron despertando de a poco, con los olores típicos que brotaban de las comidas callejeras y perfumaban todo a su alrededor, con el ruido caótico del tráfico (aún siendo que estaba en las afueras de la ciudad), con las imágenes que me ofrecía esa ciudad oriental que apenas se desperezaba. Con sus adornos coloridos por doquier, la gente cocinando, comiendo, lavando los platos y hasta secando su ropa en la calle, mostrando su vida al primer espectador que supiera valorar esas escenas. Mi impresión fue ver gente que vive su vida de manera individual, apurada para llegar a no sé donde, y que poco parece preocuparles lo que suceda a su alrededor. Su atención está puesta en el trabajo, en sus urgencias y en protegerse de la contaminación con los barbijos más estrambóticos que puedan encontrar en el mercado. A causa de eso, a la mayoría no podía vérsele el rostro, sólo los ojos, ojos que no paraban de mirarme, haciéndome sentir más desubicada que torta frita en fiesta de quince.
 </p>
+
+<figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-02.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>La ropa secándose en la vereda </i></b></figcaption>
+</figure>
 
 <p>
   Caminé cerca de 2 horas hasta llegar al río que bordea la ciudad, el cual solo se puede atravesar por algún medio de trasnporte. Por supuesto pasé por la puerta de otros bancos, pero ya estaba negada, no quería ni pensar en todo lo que implicaría cambiar dinero, encontrar el metro indicado, volver a la estación en horario, etc.
@@ -98,6 +101,11 @@ Mis sentidos se fueron despertando de a poco, con los olores típicos que brotab
 <p>
 Así que me senté a contemplar la vista, pensando en por qué la vida me había llevado a ese lugar. Y me recosté en el césped a descansar de tantos nervios. Claro, los chinos corren de acá para allá y no se detienen a sentarse en el césped. Todos los que pasaban me señalaban y se reían de mí por estar descansando en un lugar público. Y me sentí completamente sola, y triste, porque empecé a pensar que me esperaban más de 2 meses en Asia. Si todo iba a ser así ya mismo me estaba sacando un vuelo de vuelta a Europa.
 </p>
+
+<figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>En el Rio Huangpu</i></b></figcaption>
+</figure>
 
 <p>
 El día se me hizo interminable. Había intentado comprar un agua con la tarjeta y no funcionó. No podía siquiera sentarme en un bar a tomar y comer algo. Por suerte siempre hay un Mc donal´s que nos ofrece generosamente su baño.
@@ -119,16 +127,11 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
   Decido buscar mi cuaderno viajero para desahogarme escribiendo al menos. El cuaderno tiene la imagen de una mujer en pose de yoga meditando, y al agarrarlo veo que se dañó la tapa justo en la frente de la chica dejando un agujero en el papel. No tengo idea de cómo pudo romperse si en la mochila sólo había ropa y no había nada cerca que pudiese romperlo. Así que deduje que la vida respondió a la pregunta que le hice frente al rio. Estuve acá para abrir mi cabeza. Y eso me pareció más que suficiente.
 </p>
 
-<figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/egipto-01.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>Esta imagen es la hora en china </i></b></figcaption>
-</figure>
-
 <p>
   Por supuesto que me arrepentí de no haber cambiado el dinero en otro banco y no haber tomado un metro para conocer más de la ciudad. Pero me lo perdono, porque es lo que mi cabeza me permitió hacer ese día. Y después de todo, salí de mi zona de confort.
 </p>
 
-<h2>
+<!-- <h2>
   Agunos recuerdos...
  </h2>
 
@@ -177,7 +180,7 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div> -->
 
 <!-- <h2 class="section-heading">The Final Frontier</h2>
 
