--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "Un solo día en un país puede ser demasiado"
 subtitle: ""
-date:   2019-2-18 10:45:13 -0400
+<!-- date:   2019-2-18 10:45:13 -0400 -->
 background: '/img/posts/china/china-01.jpg'
 ---
 
