--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -126,9 +126,10 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
 <p>
   Decido buscar mi cuaderno viajero para desahogarme escribiendo al menos. El cuaderno tiene la imagen de una mujer en pose de yoga meditando, y al agarrarlo veo que se dañó la tapa justo en la frente de la chica dejando un agujero en el papel. No tengo idea de cómo pudo romperse si en la mochila sólo había ropa y no había nada cerca que pudiese romperlo. Así que deduje que la vida respondió a la pregunta que le hice frente al rio. Estuve acá para abrir mi cabeza. Y eso me pareció más que suficiente.
 </p>
+
 <figure>
   <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/cuaderno.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>Mi cuaderno después de mi día en Shangai</i></b></figcaption>
+  <figcaption style="text-align: center;"> <b><i>Mi cuaderno, después de mi día en Shangai</i></b></figcaption>
 </figure>
 <p>
   Claro que me arrepentí de no haber cambiado el dinero en otro banco y no haber tomado un metro para conocer más de la ciudad. Pero me lo perdono, porque es lo que mi cabeza me permitió hacer ese día. Y después de todo, salí de mi zona de confort.
