--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -128,9 +128,10 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
 </p>
 
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/cuaderno.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>Mi cuaderno, después de mi día en Shangai</i></b></figcaption>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-02.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>La ropa secándose en la vereda </i></b></figcaption>
 </figure>
+
 <p>
   Claro que me arrepentí de no haber cambiado el dinero en otro banco y no haber tomado un metro para conocer más de la ciudad. Pero me lo perdono, porque es lo que mi cabeza me permitió hacer ese día. Y después de todo, salí de mi zona de confort.
 </p>
