--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -128,8 +128,8 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
 </p>
 
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/china-02.jpg" alt="Imagen mía frente al río">
-  <figcaption style="text-align: center;"> <b><i>La ropa secándose en la vereda </i></b></figcaption>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/cuaderno.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i>Mi cuaderno, después de mi día en Shangai </i></b></figcaption>
 </figure>
 
 <p>
