--- a/_posts/2019-03-18-china1.html
+++ b/_posts/2019-03-18-china1.html
@@ -128,7 +128,7 @@ El día se me hizo interminable. Había intentado comprar un agua con la tarjeta
 </p>
 
 <figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/cuaderno.jpeg" alt="Imagen mía frente al río">
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/cuad.jpg">
   <figcaption style="text-align: center;"> <b><i>Mi cuaderno, después de mi día en Shangai </i></b></figcaption>
 </figure>
 
