--- a/_posts/2019-03-28-turquia.html
+++ b/_posts/2019-03-28-turquia.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Al lado del camino"
 subtitle: ""
 date:   2019-3-28 5:45:13 -0400
-background: '/img/posts/06.jpg'
+background: '/img/posts/turquia/ruta.jpg'
 ---
 
 <p>
