--- a/_posts/2019-03-26-egipto.html
+++ b/_posts/2019-03-26-egipto.html
@@ -10,19 +10,25 @@ background: '/img/posts/egipto/camellos.jpg'
   Muy bien, pueden pasar, pero apúrense que ya se está por llenar un taxi” dijo en ingles el policía mientras nos devolvía los pasaportes sellados. La emoción nos invadió de tal manera que teníamos ganas de saltar de alegría ahí en plena frontera. Después de la odisea que fue hacer migraciones en Israel, parecía mentira que pudiésemos pasar tan rápido desde Eilat (Israel) a Taba (Egipto), considerando que son dos países que se encuentran en guerra hace años. Pero claro, somos turistas. Ojalá todos los habitantes de Oriente Medio contaran con el mismo privilegio que nosotros para atravesar fronteras que ni deberían existir. Digo nosotros porque llevaba más de un mes viajando con Camilo, un compañero de aventuras colombiano que me regaló el camino.
 </p>
 
-<p>
+<!-- <p>
     <b><i> Algo nuevo </i></b>
-</p>>
+</p>> -->
 
 
 <p>
 Pusimos pies en tierras egipcias alrededor de las 4 de la tarde. Apenas atravesar la puerta, se presentaban frente a nuestros ojos hombres de blanco conversando frente a varios coches, vestidos con el Thawb (túnicas) y el Kafiyyeh (lo que los brutos llamamos turbante), confirmando que ya estábamos en este polémico país árabe. Miro a mi amigo para comentarle acerca del carnaval de emociones que estaba aconteciendo en mi interior al ver esa postal, pero mis intenciones fueron interrumpidas por el primero de los muchos tantos hombres que abandonaban sus puestos y desfilaban hacia nosotros para ofrecernos un taxi. Que poco me duró la alegría de verlos!
 </p>
-
+<figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/mapa1.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i> Península del Sinai </i></b></figcaption>
+</figure>
 <p>
 Nos encontrábamos en la región conocida como Sinaí, que es una península con forma de cono invertido y es la parte asiática de un país cuyo territorio pertenece en su mayoría al continente africano. Aquí se puede observar un gran contraste. A lo largo de su costa este, bañada por el mar Rojo, se encuentran ciudades magníficas que atraen miles de turistas de todas partes del mundo, principalmente de Israel (pueden atravesar la frontera con la misma facilidad que nosotros, pero sólo pueden permanecer en el sur, no tienen permitido dirigirse al norte de la península). Estas ciudades ostentan con sus mansiones, hoteles y resorts que albergan a quienes desean disfrutar de sus hermosas playas y sus importantes puntos de buceo. Al mismo tiempo, esta región es una de las más conflictivas y ha sido escenario histórico de guerras. Alejándonos apenas un poco de sus costas, comienza a desplegarse el territorio desértico, donde ya no se observa esta exposición competitiva de capitales, sino por el contrario, la imponencia de la naturaleza que cubre de un manto dorado de arena miles de kilómetros. Habitado principalmente por tribus beduinas, el área se convierte en una especie de “tierra de nadie”, donde la ley la impone el que mejor conoce el terreno. Por este sencillo motivo, no es posible atravesar la península por el norte (para ir por ejemplo desde Taba hasta El Cairo), y es necesario descender hasta el sur y luego volver a subir al norte por un camino próximo a su costa oeste, atravesando un número incontable de controles militares.
 </p>
-
+<figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/mapa.jpg" alt="Imagen mía frente al río">
+  <figcaption style="text-align: center;"> <b><i> Recorrido obligatorio desde Taba a El Cairo </i></b></figcaption>
+</figure>
 <p>
   Desde la frontera de Taba salen sólo dos buses por día, aproximadamente a las 8 de la mañana y otro a las 3 de la tarde (aproximadamente porque en Egipto nunca se sabe). Si no lográs coincidir con esta amplia oferta de servicios de bus, tenés que recurrir a los taxis que consisten en Vans con 16 asientos, con costo fijo que se reparte entre todos los pasajeros, por lo que hay que esperar a que se llene de gente para que arranque. De lo contrario hay que pagar el precio de los asientos vacíos entre los presentes.
 </p>
