--- a/_posts/2019-04-02-jordania.html
+++ b/_posts/2019-04-02-jordania.html
@@ -3,7 +3,7 @@ layout: post
 title:  "Sobre árabes, desierto y otros peligros"
 subtitle: ""
 <!-- date:   2019-3-30 10:45:13 -0400 -->
-background: '/img/posts/china/china-01.jpg'
+background: '/img/posts/Jordania/4.jpg'
 ---
 
 <p>
@@ -27,6 +27,10 @@ background: '/img/posts/china/china-01.jpg'
 <p>
   Cuando llegamos a la cueva ya había caído la noche y poco a poco el frío se hacía sentir. Jamal comenzó a encender velas dentro de bolsas de papel abiertas que cumplían la función de fanales, y en 5 minutos transformó ese lugar en un sueño. A medida que encendía una nueva vela, un rincón de esa gruta era forzado a hacerse visible, y así, lentamente se desplegó frente a nuestros ojos la imagen de un lugar rústico pero acogedor. Al mirarlo a Camilo, con su frondosa barba y su pelo abultado y desordenado, le confesé que me sentía en la época del hombre de las cavernas. La temperatura en el interior de la cueva era increíblemente templada, a pesar de estar abierta en forma permanente al exterior.
 </p>
+<figure>
+  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/Jordania/cueva.jpg">
+  <figcaption style="text-align: center;"> <b><i> Dentro de la cueva </i></b></figcaption>
+</figure>
 <p>
   Afuera de la cueva, Jamal encendió más velas, que rápidamente perdieron relevancia cuando comenzó a arder la fogata que preparó en medio. Pronto vino su hermano con una alemana que estaba hospedándose en su hostel, y juntos prepararon pollo con papas y arroz. Lo interesante no era tanto la comida en sí sino el modo particular de cocinar que tienen los beduinos. Ellos cavan un pozo en la tierra y ubican dentro un tambor de 200 litros. En el fondo de este tambor ponen brasas y por encima colocan una doble parrilla circular que encaja a la perfección dentro del mismo. Luego colocan una tapa de metal por encima y finalmente cubren la tapa con arena, logrando así el efecto de un horno. 
 </p>
@@ -54,6 +58,80 @@ background: '/img/posts/china/china-01.jpg'
 <p>
   Y así iban desfilando, una a una frente a nosotros, las esculturas que le daban a esta ciudad la imponencia y la belleza que con razón la hacen ubicarse entre las siete maravillas del mundo. Nueve horas y 30 kilómetros de caminata fueron el resultado del romance de un día con esa ciudad.
 </p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/2.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Dia</h5>
+        <p>Eran 4 de abril</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/3.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>...</h5>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/11.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>...</h5>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/1.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/5.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/7.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/8.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/9.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> -->
 <p>
   Muertos de hambre, nos sentamos en el primer puesto que vimos a comer cualquier cosa que nos ofrecieran. Una vez satisfechos, llamamos a Jamal y él nos recogió en el camino. Esa noche vendría su primo a cenar con nosotros en la cueva. Jamás adivinarían su nombre… si, Ahmet.
 </p>
@@ -97,81 +175,3 @@ background: '/img/posts/china/china-01.jpg'
   No me creo mejor ni peor que nadie, pero en la mentalidad occidental me siento más confortable. Tal vez es porque nací en ella y es la que más conozco ¿no? No lo sé, pero por las dudas volví a agradecer a Dios por haber nacido en el lugar y la época que nací.  
 </p>
 
-<figure>
-  <img class="img-fluid" src="{{ site.baseurl }}/img/posts/china/cuad.jpg">
-  <figcaption style="text-align: center;"> <b><i>Mi cuaderno, después de mi día en Shangai </i></b></figcaption>
-</figure>
-
-<!-- <h2>
-  Agunos recuerdos...
- </h2>
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/china/china-01.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Dia</h5>
-        <p>Eran 4 de abril</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/china/china-02.jpg" alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>...</h5>
-        <p>...</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/china/china-03.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>...</h5>
-        <p>...</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/china/china-3.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
-        </div>
-      </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> -->
-
-<!-- <h2 class="section-heading">The Final Frontier</h2>
-
-<p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-<p>There can be no thought of finishing for ‘aiming for the stars.’ Both figuratively and literally, it is a task to occupy the generations. And no matter how much progress one makes, there is always the thrill of just beginning.</p>
-
-<blockquote class="blockquote">The dreams of yesterday are the hopes of today and the reality of tomorrow. Science has not yet mastered prophecy. We predict too much for the next year and yet far too little for the next ten.</blockquote>
-
-<p>Spaceflights cannot be stopped. This is not the work of any one man or even a group of men. It is a historical process which mankind is carrying out in accordance with the natural laws of human development.</p>
-
-<h2 class="section-heading">Reaching for the Stars</h2>
-
-<p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
-
-<img class="img-fluid" src="https://source.unsplash.com/Mn9Fa_wQH-M/800x450" alt="Demo Image">
-<span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
-
-<p>Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.</p>
-
-<p>As I stand out here in the wonders of the unknown at Hadley, I sort of realize there’s a fundamental truth to our nature, Man must explore, and this is exploration at its greatest.</p>
-
-<p>Placeholder text by <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by <a href="https://unsplash.com/">Unsplash</a>.</p> -->
