--- a/_posts/2019-03-26-egipto.html
+++ b/_posts/2019-03-26-egipto.html
@@ -49,7 +49,7 @@ Subimos los tres a la Van y emprendimos el camino de unos 140 kilómetros que no
   Se ve que un buen hombre leyó mis pensamientos y se ofreció a llevarnos hasta destino. En el camino nos contaba que había perdido 3 amigos que habían tenido accidentes con camellos en la ruta. “Ustedes se salvaron porque les tocó un señor mayor que iba a menos de 60km por hora y en una Van que es alta. Si se me cruzaba el camello a mi, me mato sin duda”.
 </p>
 
-<blockquote class="blockquote">Ese día aprendí cuan peligrosa que puede ser la ley de atracción y lo arriesgado que puede ser no seguir la voluntad de una moneda.</blockquote>
+<p>Ese día aprendí cuan peligrosa que puede ser la ley de atracción y lo arriesgado que puede ser no seguir la voluntad de una moneda. </p>
 
 <figure>
   <img class="img-fluid" src="{{ site.baseurl }}/img/posts/egipto/yocamello.jpg" alt="Imagen mía frente al río">
