--- a/_posts/2019-04-02-jordania.html
+++ b/_posts/2019-04-02-jordania.html
@@ -69,22 +69,22 @@ background: '/img/posts/Jordania/4.jpg'
     <div class="carousel-item active">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/2.jpg" alt="First slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Dia</h5>
-        <p>Eran 4 de abril</p>
+        <!-- <h5>Dia</h5> -->
+        <p>Muros que forman la pasarela</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/3.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
         <h5>...</h5>
-        <p>...</p>
+        <p>El tesoro</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/11.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h5>...</h5>
-        <p>...</p>
+        <p>El monasterio</p>
       </div>
     </div>
     <div class="carousel-item">
@@ -98,7 +98,7 @@ background: '/img/posts/Jordania/4.jpg'
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/5.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
           <h5>...</h5>
-          <p>...</p>
+          <p>Anfiteatro romano</p>
         </div>
       </div>
       <div class="carousel-item">
@@ -131,7 +131,7 @@ background: '/img/posts/Jordania/4.jpg'
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div> -->
+</div>
 <p>
   Muertos de hambre, nos sentamos en el primer puesto que vimos a comer cualquier cosa que nos ofrecieran. Una vez satisfechos, llamamos a Jamal y él nos recogió en el camino. Esa noche vendría su primo a cenar con nosotros en la cueva. Jamás adivinarían su nombre… si, Ahmet.
 </p>
