--- a/_posts/2019-03-28-turquia.html
+++ b/_posts/2019-03-28-turquia.html
@@ -41,6 +41,119 @@ background: '/img/posts/turquia/ruta.jpg'
   <p>
       Pensé que sería un buen desafío compartir un tiempo viajando con este particular sujeto que la vida había puesto en mi camino. A la semana siguiente yo finalizaría mi voluntariado y comenzaría a recorrer el resto de Turquía sin muchos planes ni una ruta trazada. Camilo nació sin planes, y creo que él también pensó que tendría mucho que aprender de esta combinación de personalidades en ruta, por lo que se unió a mi iniciativa de recorrer el país juntos. Fue así que en pocos días estábamos en un bus yendo a Capadocia. 
   </p>
+  <h2>
+  Agunos recuerdos de Capadocia
+ </h2>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/1.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5></h5>
+        <p></p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/13.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>...</h5>
+        <p>...</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/7.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>...</h5>
+        <p>Volando en globo</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/8.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/9.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/2.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/11.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>Viendo los globos al amanecer desde un punto panorámico</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/4.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>Una banda koreana musicalizó el momento</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/5.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/3.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>...</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/10.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>En la chimenea de las hadas</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/12.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>En las ciudades subterráneas</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/6.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>...</h5>
+          <p>Claramente seriedad cero</p>
+        </div>
+      </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
   <p>
       Cuando comencé a viajar sola, por seguridad, me prometí que esperaría a estar viajando con alguien para hacer autostop, algo que siempre quise experimentar. Ahora estaba con Camilo, pero estábamos en Turquía, y a mí se me hacía peligroso viajar en ese país a dedo. Sin embargo, pensando en los países que tenía por delante (Israel, Jordania, Egipto tal vez) me di cuenta de que sería lo mismo en cualquiera de ellos. Bueno será Turquía entonces – pensé.
   </p>
@@ -69,6 +182,10 @@ background: '/img/posts/turquia/ruta.jpg'
       Lo más extraño era que los chicos tenían en su teléfono google traductor, y no lo usaron para ponernos de acuerdo en el lugar hacia el que nos dirigíamos, pero sí para desplegar todo su romanticismo diciéndome que yo era linda y que uno de ellos quería tener sexo conmigo y el otro con Camilo. Leessssto, cerrame la 8! Esa soltura e impunidad que tienen los hombres de oriente medio para expresar sus deseos ya la había experimentado antes, pero nunca en un auto donde dependíamos ellos. Insistieron unas dos veces más y yo empezaba a preocuparme un poco. Pero sólo quedó en una propuesta indecente, y al rato desistieron de la misma. Más allá de toda intención que tuvieran, eran dos chicos simpáticos que entre risas y con ayuda del traductor también intentaban saber e interiorizarse en nuestra aventura mochilera, pero reconozco que hay que hacer un esfuerzo muy grande por separar lo que es una cuestión de diferencia  cultural al hacer un juicio de valor de las personas. Nos bajamos donde nos dijeron, sin tener mucha idea de qué ciudad era ni si íbamos por buen camino. 
 
   </p>
+  <figure>
+    <img class="img-fluid" src="{{ site.baseurl }}/img/posts/turquia/acosadores.jpg" alt="ATR">
+    <figcaption style="text-align: center;"> <b><i>Con nuestros acosadores </i></b></figcaption>
+  </figure> 
   <p>
       No tuvimos que esperar más de 3 minutos antes de que se detuviera un camión, dispuesto a llevarnos, otra vez, a quién carajo sabe dónde. Otro buen hombre que no hablaba inglés y nos ofrecía cigarrillos como para suplir su escases de palabras. Pero al menos este no invirtió todos sus esfuerzos lingüísticos en decir “very beautiful”. Esto ya se tornaba gracioso y a cada rato nos preguntábamos a donde terminaríamos. Ya ni nos consultábamos si subir o no, había que darle para adelante. De todas maneras yo me iba a subir igual, nunca había andado en un camión con la cabina tan alta. A Camilo no le gustaban los camiones porque van despacio. Yo en cambio estaba fascinada por la vista que se tiene desde ahí arriba, y disfruté mucho la hora y media arriba de ese vehículo. Lo que no disfruté fue mi descenso. La novata, ansiosa por salir, abrazó su mochilota y pretendía bajar de frente, sin poder ver los 3 escalones del camión por culpa de la mochila. Habrá sido un espectáculo interesante para el que venía caminando y vio una mujer salir eyectada de un camión cayendo de boca al piso. Por suerte la mochila sirvió para amortiguar mi caída. 
 
