--- a/_posts/2019-03-28-turquia.html
+++ b/_posts/2019-03-28-turquia.html
@@ -63,8 +63,8 @@ background: '/img/posts/turquia/ruta.jpg'
     <div class="carousel-item">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/13.jpg" alt="Second slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5>...</h5>
-        <p>...</p>
+        <h5></h5>
+        <p></p>
       </div>
     </div>
     <div class="carousel-item">
@@ -77,70 +77,70 @@ background: '/img/posts/turquia/ruta.jpg'
     <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/8.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
+          <h5></h5>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/9.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
+          <h5></h5>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/2.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
+          <h5></h5>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/11.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>Viendo los globos al amanecer desde un punto panorámico</p>
+          <h5></h5>
+          <p>Viendo los globos al amanecer</p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/4.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
+          <h5></h5>
           <p>Una banda koreana musicalizó el momento</p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/5.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
+          <h5></h5>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/3.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
+          <h5></h5>
+          <p></p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/10.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
+          <h5></h5>
           <p>En la chimenea de las hadas</p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/12.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
+          <h5></h5>
           <p>En las ciudades subterráneas</p>
         </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/turquia/6.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
+          <h5></h5>
           <p>Claramente seriedad cero</p>
         </div>
       </div>
