--- a/about.html
+++ b/about.html
@@ -1,12 +1,18 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
-background: '/img/bg-about.jpg'
+description: 
+background: '/img/egipto/piramide.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p>
+    <b><i>Dicen que viajando se fortalece el corazón...</i></b>
+</p>
+<p>
+    Soy Marina y durante el 2018 viajé con Koalita (mi mochila) por Europa, sudeste asiático, medio oriente y Sudáfrica. Innumerables son los aprendizajes y vivencias que me dejó este año en el que por fin me animé a soltar todo y viajar sola por primera vez. Bueno, sola es una forma de decir, porque junto con las vivencias el camino también te regala gente inolvidable, y casi siempre se está acompañado.
+</p>
+<p>
+    Este es un espacio para compartir algunas de esas experiencias que tanto marcaron mi vida.  
+</p>
+<p>Escribo porque me encanta, me hace bien, me ayuda a no olvidar.</p>
+<p>Lo comparto porque si bien los aprendizajes son intrasferibles, tal vez a alguien le despierta la duda, la curiosidad y se anima a iniciar o continuar la búsqueda de sus propias experiencias. A quien quiera corroborar o refutar las ideas que aquí expongo, bienvenido sea su aporte. Todo sirve para construir y crecer.</p>
