--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: 
-background: '/img/egipto/piramide.jpg'
+background: '/img/posts/egipto/piramide.jpg'
 ---
 
 <p>
