--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ background: '/img/posts/egipto/piramide.jpg'
     <b><i>Dicen que viajando se fortalece el corazón...</i></b>
 </p>
 <p>
-    Soy Marina y durante el 2018 viajé con Koalita (mi mochila) por Europa, sudeste asiático, medio oriente y Sudáfrica. Innumerables son los aprendizajes y vivencias que me dejó este año en el que por fin me animé a soltar todo y viajar sola por primera vez. Bueno, sola es una forma de decir, porque junto con las vivencias el camino también te regala gente inolvidable, y casi siempre se está acompañado.
+   Durante el 2018 viajé con Koalita (mi mochila) por Europa, sudeste asiático, medio oriente y Sudáfrica. Innumerables son los aprendizajes y vivencias que me dejó este año en el que por fin me animé a soltar todo y viajar sola por primera vez. Bueno, sola es una forma de decir, porque junto con las vivencias el camino también te regala gente inolvidable, y casi siempre se está acompañado.
 </p>
 <p>
     Este es un espacio para compartir algunas de esas experiencias que tanto marcaron mi vida.  
