--- a/_posts/2019-04-02-jordania.html
+++ b/_posts/2019-04-02-jordania.html
@@ -64,6 +64,10 @@ background: '/img/posts/Jordania/4.jpg'
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -80,32 +84,32 @@ background: '/img/posts/Jordania/4.jpg'
         <p>El tesoro</p>
       </div>
     </div>
+  </div>
+  <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/1.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+      <div class="carousel-caption d-none d-md-block">
+        <h5></h5>
+        <p></p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/7.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>...</h5>
+        <p>...</p>
+      </div>
+    </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/11.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
         <p>El monasterio</p>
       </div>
-    </div>
-    <div class="carousel-item">
-        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/1.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
-        <div class="carousel-caption d-none d-md-block">
-          <h5></h5>
-          <p></p>
-        </div>
-      </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/5.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
         <div class="carousel-caption d-none d-md-block">
           <h5></h5>
           <p>Anfiteatro romano</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/Jordania/7.jpg" alt="Aca estoy culo al norte, pero no carga la foto">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>...</h5>
-          <p>...</p>
         </div>
       </div>
       <div class="carousel-item">
