--- a/_posts/2019-04-10-Vietnam.html
+++ b/_posts/2019-04-10-Vietnam.html
@@ -326,6 +326,7 @@ background: '/img/posts/vietnam/0.jpg'
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -361,6 +362,13 @@ background: '/img/posts/vietnam/0.jpg'
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
         <p>En el paseo en bote, saliendo de una cueva</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ site.baseurl }}/img/posts/vietnam/12.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5></h5>
+        <p>Remando con los pies</p>
       </div>
     </div>
   </div>
